--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.62.11",
     "@vis.gl/react-google-maps": "^1.4.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
     "react": "^19.0.0",
@@ -22,6 +23,7 @@
     "@tanstack/eslint-plugin-query": "^5.62.9",
     "@tanstack/react-query-devtools": "^5.62.11",
     "@types/google.maps": "^3.58.1",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
