--- a/package.json
+++ b/package.json
@@ -9,19 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.62.11",
     "@vis.gl/react-google-maps": "^1.4.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.9.3",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zod": "^3.24.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tanstack/eslint-plugin-query": "^5.62.9",
-    "@tanstack/react-query-devtools": "^5.62.11",
     "@types/google.maps": "^3.58.1",
     "@types/lodash": "^4.17.14",
     "@types/node": "^20",
