--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.64.1",
     "@vis.gl/react-google-maps": "^1.4.2",
     "lodash": "^4.17.21",
     "next": "15.1.3",
@@ -18,6 +19,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tanstack/eslint-plugin-query": "^5.62.16",
+    "@tanstack/react-query-devtools": "^5.64.1",
     "@types/google.maps": "^3.58.1",
     "@types/lodash": "^4.17.14",
     "@types/node": "^20",
