--- a/env.example
+++ b/env.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="ADD_YOUR_GOOGLE_MAPS_KEY"
 NEXT_PUBLIC_GOOGLE_MAPS_ID="ADD_YOUR_GOOGLE_MAPS_ID"
+NEXT_PUBLIC_IMAGE_URL="https://ik.imagekit.io/listings"
