--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.64.1",
     "@vis.gl/react-google-maps": "^1.4.2",
     "class-variance-authority": "^0.7.1",
