--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-use": "^17.6.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -41,6 +40,7 @@
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   }
 }
