--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-use": "^17.6.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
