--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
@@ -41,6 +42,7 @@
     "eslint": "^9.25.1",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5.8.3"
